<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="89dp">

    <Button
        android:id="@+id/button_city"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/city"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/heading_build" />

    <Button
        android:id="@+id/button_settlement"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:text="@string/settlement"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/button_road"
        app:layout_constraintStart_toStartOf="@+id/button_road"
        app:layout_constraintTop_toBottomOf="@+id/button_road" />

    <Button
        android:id="@+id/button_road"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/road"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/heading_build"
        app:layout_constraintTop_toBottomOf="@+id/heading_build" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8304279" />

    <TextView
        android:id="@+id/heading_build"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/heading_build"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.68" />

    <TextView
        android:id="@+id/heading_trade"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/heading_trade"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button_trade"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/trade"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/heading_trade" />

    <Button
        android:id="@+id/button_scoreboard"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:text="@string/scoreboard"
        app:layout_constraintEnd_toEndOf="@+id/heading_game"
        app:layout_constraintStart_toStartOf="@+id/heading_game"
        app:layout_constraintTop_toBottomOf="@+id/heading_game" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.84" />

    <TextView
        android:id="@+id/heading_resources"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/heading_resources"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20019531" />

    <TextView
        android:id="@+id/heading_playerName"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/heading_playerName"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/label_ore"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ore"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/heading_resources" />

    <TextView
        android:id="@+id/value_lumber"
        android:layout_width="24dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/label_lumber"
        app:layout_constraintTop_toTopOf="@+id/label_lumber" />

    <TextView
        android:id="@+id/value_wool"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="@+id/value_lumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/label_wool"
        app:layout_constraintTop_toBottomOf="@+id/value_lumber" />

    <TextView
        android:id="@+id/value_brick"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="@+id/value_wool"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/label_brick"
        app:layout_constraintTop_toBottomOf="@+id/value_wool" />

    <TextView
        android:id="@+id/value_grain"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/label_grain"
        app:layout_constraintTop_toBottomOf="@+id/value_ore" />

    <TextView
        android:id="@+id/value_ore"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/label_ore"
        app:layout_constraintTop_toTopOf="@+id/label_ore" />

    <TextView
        android:id="@+id/label_victoryPoints"
        android:layout_width="101dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Victory Points"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/heading_playerName" />

    <TextView
        android:id="@+id/value_victoryPoints"
        android:layout_width="35dp"
        android:layout_height="19dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/label_victoryPoints"
        app:layout_constraintStart_toEndOf="@+id/label_victoryPoints"
        app:layout_constraintTop_toTopOf="@+id/label_victoryPoints"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_endTurn"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/endTurn"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/value_victoryPoints" />

    <Button
        android:id="@+id/button_roll"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/roll"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/label_victoryPoints" />

    <TextView
        android:id="@+id/label_grain"
        android:layout_width="46dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/grain"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/label_ore" />

    <TextView
        android:id="@+id/label_lumber"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lumber"
        app:layout_constraintStart_toEndOf="@+id/value_ore"
        app:layout_constraintTop_toBottomOf="@+id/heading_resources" />

    <TextView
        android:id="@+id/label_wool"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/wool"
        app:layout_constraintStart_toStartOf="@+id/label_lumber"
        app:layout_constraintTop_toBottomOf="@+id/label_lumber" />

    <TextView
        android:id="@+id/label_brick"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/brick"
        app:layout_constraintStart_toStartOf="@+id/label_wool"
        app:layout_constraintTop_toBottomOf="@+id/label_wool" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5419922" />

    <Button
        android:id="@+id/button_development"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:text="@string/developmentCards"
        app:layout_constraintEnd_toEndOf="@+id/button_city"
        app:layout_constraintStart_toStartOf="@+id/button_city"
        app:layout_constraintTop_toBottomOf="@+id/button_city" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />

    <TextView
        android:id="@+id/heading_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/heading_game"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/button_menu"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:text="@string/menu"
        app:layout_constraintEnd_toEndOf="@+id/button_scoreboard"
        app:layout_constraintStart_toStartOf="@+id/button_scoreboard"
        app:layout_constraintTop_toBottomOf="@+id/button_scoreboard" />

</android.support.constraint.ConstraintLayout>